# backend/internal/models/equipment.go
@@ -7,6 +7,8 @@ type Equipment struct {
 	Name           string     `db:"name" json:"name"`
 	Description    string     `db:"description" json:"description"`
 	CommissionedAt *string    `db:"commissioned_at" json:"commissioned_at,omitempty"`
+	Picture        *string    `db:"picture" json:"picture,omitempty"`
+	Icon           string     `db:"icon" json:"icon"`
 	TracksHours    bool       `db:"tracks_hours" json:"tracks_hours"`
 	Hours          *float64   `db:"hours" json:"hours"`
 	HoursUpdatedAt *time.Time `db:"hours_updated_at" json:"hours_updated_at"`
